fast-webapp/webapp/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fast-webapp
  namespace: fast-platform
  labels:
    platform: fast
    module: core
    app: webapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        platform: fast
        module: core
        app: webapp
    spec:
      containers:
      - name: nginx
        image: eufast/fast-webapp-nginx:0.1.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /fast/static
          name: ephemeral-data
          subPath: static
        - mountPath: /fast/media
          name: data
          subPath: media
      - name: webapp
        image: eufast/fast-webapp:0.1.0
        imagePullPolicy: Always
        ports:
        - name: django
          containerPort: 8081
        resources:
          limits:
            cpu: 2
            memory: 4Gi
          requests:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - mountPath: /fast/static
          name: ephemeral-data
          subPath: static
        - mountPath: /fast/log
          name: ephemeral-data
          subPath: log
        - mountPath: /fast/media
          name: data
          subPath: media
      volumes:
      - name: ephemeral-data
        emptyDir: {}
      - name: data
        persistentVolumeClaim:
          claimName: fast-webapp
