fast-webapp/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-webapp
  namespace: fast-platform  
  labels:
    platform: fast
    module: core
    app: webapp
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    platform: fast
    module: core
    app: webapp
